src/objects/External_API_Static_Values__mdt.object
<CustomObject>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External API Static Values</label>
    <pluralLabel>External API Static Values</pluralLabel>
</CustomObject>